Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106653

Crash on Accessibility interface

XMLWordPrintable

    • Windows
    • 80f44954f (dev), 97c650f48 (tqtc/lts-6.2), 6a9226b43 (6.3), c3b3329ad (6.4), cf83bd0d5 (tqtc/lts-5.15), bf6e54475 (tqtc/lts-6.5), caa560931 (dev), 29c32e7cd (6.8)

      windows accessibility is crash occasionaly

        For Gerrit Dashboard: QTBUG-106653
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            x.jing Jannis xiong
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: